# rust-fullstack-carteira-investimentos

./: Cargo.toml  Dockerfile  README.md  compose.yml
.sqlx/: query-1e4a9001cd13b1f07571000ccca98ad73e0eb5327236e0733e13fb9d6a7834bc.json  query-678333e1d940c59ce00aa53d7ef916d1412bb64c92b9c87dc3f465848cc28aaa.json  query-6c3b671ce7f0639db0d9f2f9d98d52b2480b7633e554acc85663c47c355f22e3.json  query-c1db07331f61a64c4afe3b87268c9177afdcdc757d9392a636fb8624130a5b50.json  query-c803cfa70850efe137bd6f949bd7faae9ce8308465f293874bf09aeb54972fd8.json  query-f4bfd547345a5722af7e6d8f2f0aff9defd9e92c6ba057c3fbe57aed8b709965.json  query-f64325718daaff794cdd08569e7b423ede4b927664575e1d18af5e3acaf28271.json
migrations/: 20260328192535_create_assets.up.sql  20260329160020_create_users.up.sql  20260330120000_create_owned_assets.down.sql  20260330120000_create_owned_assets.up.sql  20260708230000_seed_assets.down.sql  20260708230000_seed_assets.up.sql
src/: app.rs  error.rs  main.rs  models.rs  repository.rs
src/auth/: admin.rs  user.rs
src/routes/: api.rs  frontend.rs
src/routes/fixtures/: bitcoin_asset.sql
src/routes/snapshots/: wallet_live__routes__api__tests__update_asset.snap
templates/: login.html
templates/assets/: index.html
